[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/end_screen.png" type="Texture" id=2]
[ext_resource path="res://Assets/replay.png" type="Texture" id=3]
[ext_resource path="res://Scripts/EndScene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[node name="EndScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PopBox" type="TextureRect" parent="."]
anchor_left = 0.000868056
anchor_top = 0.246094
anchor_right = 0.999132
anchor_bottom = 0.753906
margin_top = -3.05176e-05
rect_min_size = Vector2( 575, 520 )
rect_pivot_offset = Vector2( 188.042, 323.043 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="PopBox"]
anchor_left = 0.400846
anchor_top = 0.131963
anchor_right = 0.646063
anchor_bottom = 0.312733
rect_pivot_offset = Vector2( 67.5136, 218.746 )
custom_fonts/font = SubResource( 1 )
text = "END"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EndScore" type="Label" parent="PopBox"]
anchor_left = 0.293962
anchor_top = 0.330404
anchor_right = 0.71657
anchor_bottom = 0.468866
rect_pivot_offset = Vector2( -802.728, -143.69 )
custom_fonts/font = SubResource( 2 )
text = "Score: 000"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EndMove" type="Label" parent="PopBox"]
anchor_left = 0.290104
anchor_top = 0.498436
anchor_right = 0.728365
anchor_bottom = 0.636897
rect_pivot_offset = Vector2( -802.728, -143.69 )
custom_fonts/font = SubResource( 2 )
text = "Moves: 000"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReplayButton" type="TextureButton" parent="PopBox"]
anchor_left = 0.43913
anchor_top = 0.673077
anchor_right = 0.578261
anchor_bottom = 0.826923
margin_right = 55.0
margin_bottom = 90.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="PopBox/ReplayButton" to="." method="_on_ReplayButton_pressed"]
